# Engine_Tutorial

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini
Assets/Configs/: AppIcon.rc  editorLayout.ini
Assets/Scene/: Circle.zscene  Nahida  Nahida.zscene  Scene.zscene  ScriptTest.zscene
Assets/Shaders/: Circle.glsl  EasySample.glsl  Line.glsl  PBR-noVertexBlending.glsl  PBR.glsl  Quad.glsl  SkyBox.glsl  pick-noVertexBlending.glsl  pick.glsl
Assets/Shaders/Tools/: ConvertToCube.glsl  genIrradiance.glsl
Assets/Shaders/include/: commonFunc.glsl  commonVal.glsl
Bin-C/MSVC/: imgui.ini  shader.spv
Bin-C/Shaders/: One.glsl  defaultU.glsl
Engine/: CMakeLists.txt  z.h
Engine/Include/assimp/: CMakeLists.txt
Engine/Include/box2d/: CMakeLists.txt
Engine/Include/filewatch/: LICENSE  filewatch.h
Engine/Include/glad/: CMakeLists.txt
Engine/Include/glad/include/glad/: glad.h
Engine/Include/glad/src/: glad.c
Engine/Include/imgui/: CMakeLists.txt  imconfig.h
Engine/Include/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_vulkan.h
Engine/Include/tinyobjloader/: CMakeLists.txt
Engine/Include/yaml-cpp/: CMakeLists.txt
Engine/Platform/Linux/: LinuxUtils.cpp
Engine/Platform/OpenGL/: ImGuiRendererOpenGL.cpp  ImGuiRendererOpenGL.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRenderAPI.cpp  OpenGLRenderAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTextures.cpp  OpenGLTextures.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  zOpenGLContext.cpp  zOpenGLContext.h
Engine/Platform/Vulkan/: ImGuiRendererVulkan.cpp  ImGuiRendererVulkan.h  ImGuiVulkanRenderDocking.cpp  VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanFrameBuffer.cpp  VulkanFrameBuffer.h  VulkanGraphicInterface.cpp  VulkanGraphicInterface.h  VulkanRenderAPI.cpp  VulkanRenderAPI.h  VulkanRenderInterface.h  VulkanResource.h  VulkanShader.cpp  VulkanShader.h  VulkanTextures.cpp  VulkanTextures.h  VulkanUniformBuffer.cpp  VulkanUniformBuffer.h  VulkanUtils.h  VulkanVertexArray.cpp  VulkanVertexArray.h  vma_impl.cpp  zVulkanContext.cpp  zVulkanContext.h
Engine/Platform/Windows/: WindowsUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Engine/Z/Core/: Application.cpp  Application.h  AssetsSystem.cpp  AssetsSystem.h  Core.h  Entry.h  GUID.cpp  GUID.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStacks.cpp  LayerStacks.h  Log.cpp  Log.h  MouseButtonCodes.h  Random.cpp  Random.h  Time.cpp  Time.h  WindowImpl.cpp  WindowImpl.h  zGUID.cpp  zGUID.h  zWindow.h
Engine/Z/Debug/: Instrumentor.h
Engine/Z/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/Z/ImGui/: ImGuiContent.cpp  ImGuiContent.h  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiRendererPlatform.cpp  ImGuiRendererPlatform.h
Engine/Z/Project/: Project.cpp  Project.h
Engine/Z/Renderer/: Animation.cpp  Animation.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  EditorCamera.cpp  EditorCamera.h  FrameBuffer.cpp  FrameBuffer.h  GraphicContext.cpp  GraphicContext.h  GraphicInterface.cpp  GraphicInterface.h  OrithGraphicCamera.cpp  OrithGraphicCamera.h  Particle.cpp  Particle.h  RenderAPI.cpp  RenderAPI.h  RenderCommand.cpp  RenderCommand.h  RenderInterface.h  RenderManager.cpp  RenderManager.h  RenderPass.cpp  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h  RenderResource.cpp  RenderResource.h  RenderResourceTypes.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  (+14 more)
Engine/Z/Renderer/Passes/: ConvertCubePass.cpp  ConvertCubePass.h  GenIrradiancePass.cpp  GenIrradiancePass.h  GeneralPass.cpp  GeneralPass.h  MainCameraPass.cpp  MainCameraPass.h  PickPass.cpp  PickPass.h  SkyboxPass.cpp  SkyboxPass.h  UIPass.cpp  UIPass.h
Engine/Z/Scene/: Components.h  Entity.cpp  Entity.h  Entity.hpp  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptEntity.cpp  ScriptEntity.h
Engine/Z/Script/: ScriptEngine.cpp  ScriptEngine.h  ScriptReg.cpp  ScriptReg.h
Engine/Z/Utils/: Model.cpp  Model.h  ZUtils.cpp  ZUtils.h
Engine/ZScriptCore/: CMakeLists.txt
Engine/ZScriptCore/src/Engine/: Input.cs  KeyCodes.cs
Engine/ZScriptsCore/: CMakeLists.txt
Engine/ZScriptsCore/src/Engine/: Core.cs  Internal.cs  Scene.cs
Projects/Test001/: Test001.zPrj  editorLayout.ini
Projects/Test001/Assets/Models/: TinyRoom.obj.zConf
Projects/Test001/Assets/Scene/: Nahida.zscene  SerTest.zscene  Snake.zscene
Projects/Test001/Assets/Sprites/: rpgSheet.png.zConf
Projects/Test001/Assets/Textures/: Colum.png.zConf  KeQin.jpg.zConf  Layla.jpg.zConf  Nahida.png.zConf  TinyRoom.png.zConf
Projects/Test001/Assets/Textures/skybox/: back.jpg.zConf  bottom.jpg.zConf  front.jpg.zConf  left.jpg.zConf  right.jpg.zConf  skybox.zConf  top.jpg.zConf
Projects/Test001/Assets/scripts/: CMakeLists.txt  Camera.cs  Player.cs
Shaders/: EasySample.glsl  Line.glsl  Quad.glsl  defaultQuad.glsl  defaultQuadTex.glsl  defaultU.glsl  frag.frag  grid.frag  vert.vert
Test/: CMakeLists.txt  SanBox2D.cpp  SanBox2D.h  Test.cpp
ZEditor/: App.cpp  CMakeLists.txt  Test.cpp  ZEditor.cpp  ZEditor.h
ZEditor/SceneHierarchy/: ContentBrowser.cpp  ContentBrowser.h  SceneHierarchyPlane.cpp  SceneHierarchyPlane.h
ZEditor/scripts/: CMakeLists.txt  Camera.cs  Player.cs
ZScriptCore/: CMakeLists.txt
ZScriptCore/src/: Core.cs  Player.cs  main.cs
ZScriptCore/src/Engine/: Core.cs  Internal.cs  Scene.cs  Vector.cs
scripts/: CMakeLists.txt  Camera.cs  Player.cs
