cmake_minimum_required(VERSION 3.20)
set(CMAKE_BUILD_TYPE RELEASE)
project(ScriptCore LANGUAGES CSharp)

if (${CMAKE_GENERATOR} MATCHES "Visual Studio")
    set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ZEditor)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY $<1:${CMAKE_SOURCE_DIR}/Bin-C/Scripts>)
    set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
else ()
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Bin-C/${CMAKE_CXX_COMPILER_ID})
endif ()
set(CMAKE_CShairp_COMPILER $ENV{VISUAL_STUDIO_PATH}/MSBuild/Current/Bin/MSBuild.exe)
file(GLOB SOURCES src/*.cs src/Engine/*.cs)
add_library(ScriptCore SHARED ${SOURCES})
target_link_libraries(ScriptCore PUBLIC System)
